fab9: div.row wrapper

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,11 +1,9 @@
 <div class="container">
-
-  <div ng-include="'components/navbar/navbar.html'"></div>
-
-  <hr>
-
-  <footer class="footer">
-    <p>...</p>
-  </footer>
-
-</div>
+  <div class="row">
+    <div ng-include="'components/navbar/navbar.html'"></div>
+    <!-- Footer -->
+    <footer class="footer">
+      <p>...</p>
+    </footer>
+  </div><!-- .row -->
+</div><!-- .container -->
