fab9: login view markup

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,6 +1,11 @@
 <div class="container">
   <div class="row">
-    <div ng-include="'components/navbar/navbar.html'"></div>
+    <!-- don't show navbar on login screen <div ng-include="'components/navbar/navbar.html'"></div> -->
+    <h2>CrossTrack</h2>
+
+    <!-- fb kettlebell -->
+    <img src="" alt=""><a href="#"></a></img>
+    <a href="#">Login</a>
     <!-- Footer -->
     <footer class="footer">
       <p>...</p>
