fb kettlebell img and formatting

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,14 +1,15 @@
 <div class="container">
   <div class="row">
-    <!-- don't show navbar on login screen <div ng-include="'components/navbar/navbar.html'"></div> -->
-    <h2>CrossTrack</h2>
+    <div class="col-xs-12">
+      <!-- don't show navbar on login screen <div ng-include="'components/navbar/navbar.html'"></div> -->
+      <h2 class="text-center logo">CrossTrack</h2>
 
-    <!-- fb kettlebell -->
-    <img src="" alt=""><a href="#"></a></img>
-    <a href="#">Login</a>
-    <!-- Footer -->
-    <footer class="footer">
-      <p>...</p>
-    </footer>
+      <a href="#"><img src="./assets/images/kettlebell-fb.png" width=80px class="img-responsive center-block" alt="Login with Facebook"></img></a>
+      <h3 class="text-center">Login</h3>
+      <!-- Footer -->
+      <footer class="footer text-center">
+        <p class="text-muted">Privacy Policy</p>
+      </footer>
+    </div><!-- .col-xs-12 -->
   </div><!-- .row -->
 </div><!-- .container -->
