--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,15 +1,19 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12 login">
       <!-- don't show navbar on login screen <div ng-include="'components/navbar/navbar.html'"></div> -->
       <h2 class="text-center logo">CrossTrack</h2>
 
       <a href="#"><img src="./assets/images/kettlebell-fb.png" width=80px class="img-responsive center-block" alt="Login with Facebook"></img></a>
       <h3 class="text-center">Login</h3>
-      <!-- Footer -->
-      <footer class="footer text-center">
-        <p class="text-muted">Privacy Policy</p>
-      </footer>
+
     </div><!-- .col-xs-12 -->
   </div><!-- .row -->
 </div><!-- .container -->
+
+<!-- Sticky Footer -->
+<footer class="footer">
+  <div class="container">
+    <p class="text-muted text-center">Privacy Policy</p>
+  </div><!-- .footer > .container -->
+</footer>
