fab9: dashboard layout

--- a/src/app/custom.scss
+++ b/src/app/custom.scss
@@ -3,7 +3,11 @@
   margin-bottom: 4em;
 }
 
-footer {
+.avatar {
+  background-color: #eee;
+}
+
+.footer {
   position: absolute;
   bottom: 0;
   width: 100%;
