--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -11,6 +11,29 @@
   </div><!-- .row -->
 </div><!-- .container -->
 
+<!-- Sticky footer -->
+<footer class="footer">
+  <div class="container">
+    <p class="text-muted text-center">Privacy Policy</p>
+  </div><!-- .footer > .container -->
+</footer>
+
+<!-- Dashboard -->
+<div class="container">
+  <div class="row">
+    <div ng-include="'components/navbar/navbar.html'"></div>
+    <div class="col-xs-4 avatar">
+      avatar goes here
+    </div><!-- .avatar -->
+    <div class="col-xs-8">
+      <button class="btn btn-primary">Today's WOD</button>
+    </div>
+  </div><!-- .row -->
+
+  <div class="row">Days Active</div>
+  <div class="row">History</div>
+</div><!-- .container -->
+
 <!-- Sticky Footer -->
 <footer class="footer">
   <div class="container">
