fab9: dashboard view markup WIP

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -22,16 +22,31 @@
 <div class="container">
   <div class="row">
     <div ng-include="'components/navbar/navbar.html'"></div>
-    <div class="col-xs-4 avatar">
-      avatar goes here
+    <div class="col-xs-4 bg-warning">
+      <img class="img-circle" src="http://placehold.it/100X100">
     </div><!-- .avatar -->
     <div class="col-xs-8">
-      <button class="btn btn-primary">Today's WOD</button>
+      <button type="button" class="btn btn-primary btn-lg btn-block">Large button</button>
     </div>
   </div><!-- .row -->
 
-  <div class="row">Days Active</div>
-  <div class="row">History</div>
+  <div class="row">
+    <div class="col-xs-12 bg-success">
+      <h3>Days Active</h3>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec cursus diam quis leo placerat dictum. Fusce turpis quam, ultrices ut porta sed, aliquam at elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+    </div>
+  </div><!-- .row -->
+  <div class="row">
+    <div class="col-xs-12 bg-danger">
+      <h3>History</h3>
+      <ul>
+        <li>Mon Nov 20</li>
+        <li>Tue Nov 21</li>
+        <li>Wed Nov 22</li>
+        <li>Thu Nov 23</li>
+      </ul>
+    </div>
+  </div><!-- .row -->
 </div><!-- .container -->
 
 <!-- Sticky Footer -->
