create log in button

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -5,7 +5,8 @@
       <h2 class="text-center">CrossTrack</h2>
 
       <a href="#"><img src="./assets/images/kettlebell-fb.png" width=80px class="img-responsive center-block" alt="Login with Facebook"></img></a>
-      <h3 class="text-center" ng-click="login()">Log in</h3>
+      <h3 class="text-center">Log in</h3>
+      <button type="button" class="btn btn-success" ng-click="login()">Log in</button>
 
     </div><!-- .col-xs-12 -->
   </div><!-- .row -->
