fab9: github authentication works

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -6,7 +6,7 @@
 
       <a href="#"><img src="./assets/images/kettlebell-fb.png" width=80px class="img-responsive center-block" alt="Login with Facebook"></img></a>
       <h3 class="text-center">Log in</h3>
-      <button class="btn-success" ng-click="login()">Log in</button>
+      <button class="btn-success" ng-click="login()">Log in with GitHub</button>
 
     </div><!-- .col-xs-12 -->
   </div><!-- .row -->
