--- a/css/styles.css
+++ b/css/styles.css
@@ -176,6 +176,15 @@ h4 {
   list-style-type: none;
   padding: 0;
 }
+.btn.deleteMove {
+  border-radius: 50%;
+  background-color: firebrick;
+  color: white;
+  border: none;
+  margin: 0;
+  margin-left: -24px;
+  padding: 0 2%;
+}
 /* @media (min-width: 380px){
   .loginText {
     top: 75%;
