fab9: remove FIREBASE_URL constant, it breaks app

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 login">
-      <!-- don't show navbar on login screen <div ng-include="'components/navbar/navbar.html'"></div> -->
+      <div ng-include="'components/navbar/navbar.html'"></div>
       <h2 class="text-center">CrossTrack</h2>
 
       <a href="#"><img src="./assets/images/kettlebell-fb.png" width=80px class="img-responsive center-block" alt="Login with Facebook"></img></a>
