fab9: how come ftr include doesn't appear on dashboard.html

--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -28,9 +28,4 @@
   </div><!-- .row -->
 </div><!-- .container -->
 
-<!-- Sticky Footer -->
-<footer class="footer">
-  <div class="container">
-    <p class="text-muted text-center">Privacy Policy</p>
-  </div><!-- .footer > .container -->
-</footer>
+<div ng-include="'components/footer/footer.html'"></div>
