--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -7,7 +7,7 @@
 
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
     <ul class="nav navbar-nav">
-      <li class="active"><a ng-href="#/">Home</a></li>
+      <li><a ng-href="#/">Home</a></li>
       <li><a ng-href="#/dashboard">Dashboard</a></li>
       <li><a ng-href="#/new-workout">New Workout</a></li>
       <li><a ng-href="#/history">History</a></li>
