fab9: create User factory
I grabbed the first 2 chunks of code from
https://www.firebase.com/docs/web/libraries/angular/api.html#angularfire-creating-angularfire-services

--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -8,11 +8,11 @@
       <button type="button" class="btn btn-primary btn-lg btn-block">Large button</button>
     </div>
   </div><!-- .row -->
-
   <div class="row">
     <div class="col-xs-12 bg-success">
+      <p>Hello, {{ user.github.username }}</p>
       <h3>Days Active</h3>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec cursus diam quis leo placerat dictum. Fusce turpis quam, ultrices ut porta sed, aliquam at elit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec cursus diam quis leo placerat dictum.
     </div>
   </div><!-- .row -->
   <div class="row">
