--- a/src/app/views/new-workout.html
+++ b/src/app/views/new-workout.html
@@ -2,6 +2,7 @@
   <div class="row">
     <div ng-include="'components/navbar/navbar.html'"></div>
     <div class="col-xs-12">
+      <p>Hello, {{ user.github.username }}</p>
       <h2 class="text-center">What did you do today?</h2>
       <form role="form">
         <div class="form-group">
