--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-static-top navbar-inverse" ng-controller="NavbarCtrl">
   <div class="navbar-header">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="#/">
       CrossTrack
     </a>
   </div>
