fab9: index.html -> main.html, navbar.html

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,33 +1,60 @@
-<div class="container">
+  <div class="container-fluid product-page">
+    <div class="container-fluid product-page">
 
-  <div ng-include="'components/navbar/navbar.html'"></div>
+      <div ng-include="'components/navbar/navbar.html'"></div>
 
-  <div class="jumbotron text-center">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">
-      <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
-      Always a pleasure scaffolding your apps.
-    </p>
-    <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
-  </div>
+      <section class="col-xs-12 jumbotron">
+        <h1>Activ8 Fitness</h1>
+        <p><a class="btn btn-primary btn-lg" href="#aboutActiv8" role="button">Get Moving, Get Active</a></p>
+        <section class="login-screen col-xs-12 col-md-4">
+          <img src="images/loginscreen.png" alt="">
+        </section>
+        <section class="dash-screen col-xs-12 col-md-4">
+          <img src="images/dashboard.png" alt="">
+        </section>
+        <section class="new-screen col-xs-12 col-md-4">
+          <img src="images/newworkout.png" alt="">
+        </section>
+      </section>
 
-  <div class="row">
-    <div class="col-sm-6 col-md-4" ng-repeat="awesomeThing in awesomeThings | orderBy:'rank'">
-      <div class="thumbnail">
-        <img class="pull-right" ng-src="assets/images/{{awesomeThing.logo}}" alt="{{awesomeThing.title}}">
-        <div class="caption">
-          <h3>{{awesomeThing.title}}</h3>
-          <p>{{awesomeThing.description}}</p>
-          <p><a ng-href="{{awesomeThing.url}}">{{awesomeThing.url}}</a></p>
-        </div>
+    </div>
+    <div id="aboutActiv8" class="product-description">
+      <h2>Activ8 Fitness</h2>
+      <div class="row">
+        <p class="main-description col-xs-12 col-md-6">
+          Activ8 Fitness is a Fitness Tracking App that will allow you to log all of your
+          workouts and keep them organized for you. Activ8 keeps track of all of your Personal
+          Records for when you hit that big lift and shows you your progress for each movement.
+          Activ8 is easy to use and has all your favorite named workouts pre-programmed so when
+          you go out and kick Fran's ass in a time of 2 minutes flat you can select Fran from the
+          dropdown and it pre-populates for you.
+        </p>
+        <section class="dash col-xs-12 col-md-6">
+          <img src="images/dashboard.png" alt="">
+        </section>
+      </div>
+      <div class="row">
+        <p class="main-description col-xs-12">
+          Activ8 is a great way to stay active and to really stay on course to reaching your personal
+          fitness goals.
+        </p>
       </div>
     </div>
   </div>
-
-  <hr>
-
-  <div class="footer">
-    <p>With ♥ from <a href="https://twitter.com/Swiip">@Swiip</a></p>
-  </div>
-
-</div>
+  <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script>
+  $(function() {
+    $('a[href*=#]:not([href=#])').click(function() {
+      if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+        var target = $(this.hash);
+        target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+        if (target.length) {
+          $('html,body').animate({
+            scrollTop: target.offset().top
+          }, 1000);
+          return false;
+        }
+      }
+    });
+  });
+  </script>
