--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -11,9 +11,18 @@
       <li><a ng-href="#">About</a></li>
       <li><a ng-href="#">Contact</a></li>
     </ul>
+    <!-- begin our code -->
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <section class="navbar-header">
+          <a href="#" class="navbar-brand"><h3>Activ8</h3></a>
+          </section>
 
-    <ul class="nav navbar-nav navbar-right">
-      <li>Current date: {{ date | date:'yyyy-MM-dd' }}</li>
-    </ul>
+          <ul class="nav navbar-nav navbar-right navMenu">
+            <li><a href="#">About</a></li>
+            <li><a href="">Docs</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+      </nav>
+      <!-- end our code -->
   </div>
 </nav>
