--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -70,3 +70,64 @@ h3 {
   margin: 0 auto;
   display: block;
 }
+
+// dashboard styles
+    .row-1{
+      margin: 0;
+      padding-top: 20%;
+    }
+    .row-2, .row-3 {
+      color: white;
+      min-height: 20%;
+      background-color: rgba(200,0,0,0.5);
+      margin: 15% auto 0 auto;
+      width: 90%;
+    }
+    .avatar {
+      padding: 0;
+      padding-left: 10%;
+    }
+    .plus-workout button {
+      width: 100%;
+      min-height: 80px;
+      font-size: 15pt;
+    }
+    .plus-workout button a {
+      color: white;
+    }
+    #personalBests {
+      color: white;
+      background-color: rgba(0,0,0,0.4);
+      height: 100vh;
+    }
+    .prList {
+      list-style-type: none;
+      padding-right: 10px;
+      padding-left: 10px;
+    }
+    .prList li {
+      font-size: 12pt;
+      text-align: center;
+      margin-bottom: 5%;
+    }
+    .records {
+      margin: 0 auto 2% auto;
+      width: 85%;
+    }
+    .page-down a {
+      color: rgba(200,0,0,0.5);
+      font-size: 50pt;
+    }
+    .fbName {
+      color: white;
+      font-weight: bold;
+    }
+    .page-up {
+      text-align: center;
+      padding: 0;
+      background-color: rgba(0,0,0,0.4);
+    }
+    .page-up a {
+      color: rgba(200,0,0,0.5);
+      font-size: 50pt;
+    }
