fab9: still working

--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -5,7 +5,7 @@
       <figure ng-click="app.login()">
         <a ><img src="images/kettlebell.png" alt="KettleFBLogin" class="img-responsive kettle"></a><br>
           <figcaption class="loginText">
-            <a href="#"><h3>Login</h3></a>
+            <a href="#"><h3>Loginnnnnnnnnnn</h3></a>
           </figcaption>
       </figure>
 
