--- a/src/components/navbar/navbar.html
+++ b/src/components/navbar/navbar.html
@@ -2,10 +2,10 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <a class="navbar-brand" href="#">
-        <img class="ree" src="images/reebokxfit.png" alt="">
+        <img class="ree" src="./assets/images/reebokxfit.png" alt="">
         </a>
         <a class="name" href="#">
-          <h1 class="appName navbar-left">Activ8</h1>
+          <h1 class="appName">Activ8</h1>
           </a>
       </div>
 
