--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -1,41 +1,65 @@
-  <div class="container-fluid main-body" ng-controller="MainController">
-    <section id="dashboard" class="main-dash">
+
+    <section ng-show="app.loggedIn()" id="dashboard" class="main-dash">
       <nav class="navbar navbar-default main-nav" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="#">
-          <img class="ree" src="./assets/images/reebokxfit.png" alt="">
-          </a>
-          <a class="name" href="#"><section class="appName navbar-left"><h1>Activ8</h1></section></a>
-        </div>
-      </div><!-- /.container-fluid -->
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="#">
+              <img class="ree" src="images/reebokxfit.png" alt="">
+            </a>
+            <section class="appName navbar-left"><a class="name" href="#"><h1>Activ8</h1></a></section>
+            <button ng-click="app.logout()" class="btn navbar-right logout-button">Logout</button>
+          </div>
+        </div><!--/.container-fluid -->
       </nav>
       <div class="row row-1">
-      <section class="avatar col-xs-5">
-        <img src="./assets/images/LoganXfit2.jpg" class="img-responsive img-rounded fb-avatar" alt="" width="100px" height="100px"><!-- {{app.facebook.avatar_url}} -->
-        <p class="fbName">{{user.facebook.username}} Rich Froning</p>
+        <section class="avatar col-xs-5">
+          <img ng-src="{{app.user.avatarUrl}}" class="img-responsive img-rounded fb-avatar" alt="" width="100px" height="100px">
+          <p class="fbName">{{app.user.fullName|| displayName}}</p>
+        </section>
+        <section class="plus-workout col-xs-7">
+          <button type="button" class="btn btn-success work-btn glyphicon glyphicon-plus">NewWorkout</button>
+        </section>
+      </div>
+      <div class="row row-2">
+        <section class="daysActive col-xs-12">
+          <h3>Days Active Chart</h3>
+        </section>
+      </div>
+      <div class="row row-3">
+        <section class="myHistory col-xs-12">
+          <p>My History</p>
+        </section>
+      </div>
+      <section class="page-down">
+        <a href="#personalBests"><span class="glyphicon glyphicon-chevron-down"></span></a>
       </section>
-      <section class="plus-workout col-xs-7">
-        <button type="button" class="btn btn-success work-btn glyphicon glyphicon-plus"><a href="file:///Users/Logan/TheIronYard/crosstrackapp/newwork.html">New Workout</a></button>
-      </section>
-    </div>
-    <div class="row row-2">
-      <section class="daysActive col-xs-12">
-        <h3>Days Active Chart</h3>
-      </section>
-    </div>
-    <div class="row row-3">
-      <section class="myHistory col-xs-12">
-        <p>My History</p>
-      </section>
-    </div>
-    <section class="page-down">
-      <a href="#personalBests"><span class="glyphicon glyphicon-chevron-down"></span></a>
     </section>
-    </section>
-    <section id="personalBests">
+    <section ng-show="app.loggedIn()" id="personalBests">
       <h3 class="records">Personal Records(PR's)</h3>
-      <ul class="prList prList1 col-xs-6">
+        <ul class="prDrop">
+          <li>
+            <label for="personalRecords">Select Movement:</label><br>
+            <select type="text" id="personalRecords" placeholder="Breaking Records">
+              <optgroup label="Clean">
+                <option value="Power Clean">Power Clean</option>
+                <option value="Squat Clean">Squat Clean</option>
+                <option value="Hang Power Clean">Hang Power Clean</option>
+                <option value="Hang Squat Clean">Hang Squat Clean</option>
+                <option value="Clean & Jerk">Clean & Jerk</option>
+              </optgroup>
+              <optgroup label="Jerk">
+                <option value="Jerk">Jerk</option>
+                <option value="Split Jerk">Split Jerk</option>
+                <option value="Push Jerk">Push Jerk</option>
+              </optgroup>
+              <optgroup label="Snatch">
+                <option value="Power Snatch">Power Snatch</option>
+                <option value="Squat Snatch">Squat Snatch</option>
+              </optgroup>
+            </select>
+          </li>
+          </ul>
+      <!-- <ul class="prList prList1 col-xs-6">
         <li>Power Clean: {{user.pr.powerclean}} 500lbs</li>
         <li>Squat Clean: {{user.pr.squatclean}} 500lbs</li>
         <li>Hang Clean: {{user.pr.hangclean}} 500lbs</li>
@@ -61,13 +85,22 @@
         <li>Nicole: {{user.pr.nicole}} 22:00</li>
         <li>Murph: {{user.pr.murph}} 45:00</li>
         <li>Open 14.5: {{user.pr.open14-5}} 6:00</li>
-      </ul>
+      </ul> -->
       <section class="page-up col-xs-12">
         <a href="#dashboard"><span class="glyphicon glyphicon-chevron-up"></span></a>
       </section>
-  </section>
+    </section>
 
-</div>
+
+
+
+
+
+
+
+
+
+
 
 
 
