fab9: fix controller name

--- a/src/app/views/new-workout.html
+++ b/src/app/views/new-workout.html
@@ -1,4 +1,4 @@
-    <section class="main" ng-controller="WorkoutController as work">
+    <section class="main" ng-controller="NewWorkoutCtrl as work">
       <form class="newMove" >
       <div class="ui-widget movementsList">
         <input type="search" ng-model="move" placeholder="Movement">
