--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -1,34 +1,26 @@
   <div class="container-fluid main-body" ng-controller="MainController as app">
-
+    <nav ng-hide="app.loggedIn()" class="navbar navbar-default main-nav" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">
+            <img class="ree" src="images/reebokxfit.png" alt="">
+          </a>
+          <a class="name" href="#">
+            <h1 class="appName navbar-left">Activ8</h1>
+          </a>
+        </div>
+      </div><!-- /.container-fluid -->
+    </nav>
     <section ng-hide="app.loggedIn()" class="kettleBox" >
-
       <figure ng-click="app.login()">
         <a ><img src="images/kettlebell.png" alt="KettleFBLogin" class="img-responsive kettle"></a><br>
-          <figcaption class="loginText">
-            <a href="#"><h3>Loginnnnnnnnnnn</h3></a>
-          </figcaption>
+        <figcaption class="loginText">
+          <a href="#"><h3>Login</h3></a>
+        </figcaption>
       </figure>
-
       <footer><em>Privacy Policy</em></footer>
-    <!--   <div class="ui-widget movementsList">
-      <label class="whatWork" for="movements">What Did You Do Today?</label><br>
-      <input id="movements">
-    </div>
-    <section class="movementInfo">
-      <label class="reps" for="repCount">Reps:</label>
-      <input class="repCount" type="text"><br>
-      <label class="rds" for="rdsCount">Rds:</label>
-      <input class="rdsCount" type="text">
     </section>
-    <div class="ui-widget workoutList hidden">
-      <label class="whatWork" for="workoutList">What Workout Did You Do?</label><br>
-      <input id="workoutList">
-    </div>
-    <a href="#"><h4>(+)Add Movement</h4></a>
-    <a class="addWorkout removeWorkout" ><h4>(+)Add Workout</h4></a>
-        <button class="save btn btn-primary" type="submit">Save</button>
-      </div>-->
-        </section>
+
     <section ng-show="app.loggedIn()" id="dashboard" class="main-dash">
       <nav class="navbar navbar-default main-nav" role="navigation">
         <div class="container-fluid">
@@ -65,129 +57,32 @@
       </section>
     </section>
     <section ng-show="app.loggedIn()" id="personalBests">
-      <h3 class="records">Personal Records (PR's)</h3>
-        <ul class="prDrop">
-          <li>
-            <label for="personalRecords">Select Movement:</label><br>
-            <select type="text" id="personalRecords" placeholder="Breaking Records">
-              <optgroup label="Clean">
-                <option value="Power Clean">Power Clean</option>
-                <option value="Squat Clean">Squat Clean</option>
-                <option value="Hang Power Clean">Hang Power Clean</option>
-                <option value="Hang Squat Clean">Hang Squat Clean</option>
-                <option value="Clean & Jerk">Clean & Jerk</option>
-              </optgroup>
-              <optgroup label="Jerk">
-                <option value="Jerk">Jerk</option>
-                <option value="Split Jerk">Split Jerk</option>
-                <option value="Push Jerk">Push Jerk</option>
-              </optgroup>
-              <optgroup label="Snatch">
-                <option value="Power Snatch">Power Snatch</option>
-                <option value="Squat Snatch">Squat Snatch</option>
-              </optgroup>
-            </select>
-          </li>
-          </ul>
-
+      <h3 class="records">Personal Records(PR's)</h3>
+      <ul class="prDrop">
+        <li>
+          <label for="personalRecords">Select Movement:</label><br>
+          <select type="text" id="personalRecords" placeholder="Breaking Records">
+            <optgroup label="Clean">
+              <option value="Power Clean">Power Clean</option>
+              <option value="Squat Clean">Squat Clean</option>
+              <option value="Hang Power Clean">Hang Power Clean</option>
+              <option value="Hang Squat Clean">Hang Squat Clean</option>
+              <option value="Clean & Jerk">Clean & Jerk</option>
+            </optgroup>
+            <optgroup label="Jerk">
+              <option value="Jerk">Jerk</option>
+              <option value="Split Jerk">Split Jerk</option>
+              <option value="Push Jerk">Push Jerk</option>
+            </optgroup>
+            <optgroup label="Snatch">
+              <option value="Power Snatch">Power Snatch</option>
+              <option value="Squat Snatch">Squat Snatch</option>
+            </optgroup>
+          </select>
+        </li>
+      </ul>
       <section class="page-up col-xs-12">
         <a href="#dashboard"><span class="glyphicon glyphicon-chevron-up"></span></a>
       </section>
     </section>
-
-  </div>
-<script>
-      //Array of movements for the input box of workouts
-       $(function() {
-         var movements = [
-         "Pull Ups",
-         "Push Ups",
-         "Sit Ups",
-         "Clean",
-         "Power Clean",
-         "Squat Clean",
-         "Hang Clean",
-         "Hang Squat Clean",
-         "Snatch",
-         "Power Snatch",
-         "Squat Snatch",
-         "Hang Snatch",
-         "Hang Squat Snatch",
-         "Press",
-         "Strict Press",
-         "Push Press",
-         "Jerk",
-         "Push Jerk",
-         "Split Jerk",
-         ];
-         var workouts = [
-            "Amanda",
-            "Annie",
-            "Fran",
-            "Murph",
-            "Filthy Fifty"
-         ];
-         var personalRecords = [
-          "Power Clean",
-          "Squat Clean",
-          "Hang Power Clean",
-          "Hang Squat Clean",
-          "Jerk",
-          "Split Jerk",
-          "Push Jerk",
-          "Clean & Jerk",
-          "Power Snatch",
-          "Squat Snatch"
-         ];
-
-         $( "#movements" ).autocomplete({
-           source: movements
-         });
-         $("#workoutList").autocomplete({
-           source: workouts
-         });
-         $("#personalRecords").autocomplete({
-           source: personalRecords
-         });
-         /*$(".repCount").autocomplete({
-           source: reps
-         });*/
-       });
-
-
-       </script>
-       <script>
-       $(function() {
-         $('a[href*=#]:not([href=#])').click(function() {
-           if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-             var target = $(this.hash);
-             target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-             if (target.length) {
-               $('html,body').animate({
-                 scrollTop: target.offset().top
-               }, 1000);
-               return false;
-             }
-           }
-         });
-       });
-       </script>
-      <!--<script>
-        \$(".addWorkout").on('click', function(){
-        if(\$('.workoutList').hasClass('hidden')){
-      \$('.workoutList').removeClass('hidden')
-      \$('.movementsList').addClass('hidden')
-      \$(".addWorkout h4").text("(-)Remove Workout");
-          } else {
-         if(\$('.movementsList').hasClass('hidden')){
-      \$('.workoutList').addClass('hidden')
-      \$('.movementsList').removeClass('hidden')
-      \$(".addWorkout h4").text("(+)Add Workout");
-          }
-        };
-          });
-
-</script> -->
-
-</body>
-</html>
+  </div><!-- .main-body -->
