fab9: add logo img, adjust img paths

--- a/src/app/views/dashboard.html
+++ b/src/app/views/dashboard.html
@@ -4,7 +4,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="#">
-              <img class="ree" src="images/reebokxfit.png" alt="">
+              <img class="ree" src="./assets/images/reebokxfit.png" alt="">
             </a>
             <section class="appName navbar-left"><a class="name" href="#"><h1>Activ8</h1></a></section>
             <button ng-click="app.logout()" class="btn navbar-right logout-button">Logout</button>
