--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -6,7 +6,7 @@
       <p>inside nav</p>
       <div class="navbar-header">
         <a class="navbar-brand" href="#">
-          <img class="ree" src="images/reebokxfit.png" alt="">
+          <img class="ree" src="./assets/images/reebokxfit.png" alt="">
         </a>
         <a class="name" href="#">
           <h1 class="appName">Activ8</h1>
@@ -16,7 +16,7 @@
 
     <section ng-hide="app.loggedIn()" class="kettleBox" >
       <figure ng-click="app.login()">
-        <a ><img src="images/kettlebell.png" alt="KettleFBLogin" class="img-responsive kettle"></a><br>
+        <a ><img src="./assets/images/kettlebell.png" alt="KettleFBLogin" class="img-responsive kettle"></a><br>
         <figcaption class="loginText">
           <a href="#"><h3>Login</h3></a>
         </figcaption>
@@ -30,7 +30,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="#">
-              <img class="ree" src="images/reebokxfit.png" alt="">
+              <img class="ree" src="./assets/images/reebokxfit.png" alt="">
             </a>
             <section class="appName"><a class="name" href="#"><h1>Activ8</h1></a></section>
             <button ng-click="app.logout()" class="btn navbar-right logout-button">Logout</button>
