--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -31,6 +31,8 @@
       list-style-type: none;
       padding-right: 10px;
       padding-left: 10px;
+
+      outline: solid, purple, 1px;
     }
     .prList li {
       font-size: 12pt;
