--- a/src/app/views/new-workout.html
+++ b/src/app/views/new-workout.html
@@ -1,72 +1,51 @@
-    <section class="main" ng-controller="NewWorkoutCtrl as work">
-      <form class="newMove" >
-      <div class="ui-widget movementsList">
-        <input type="search" ng-model="move" placeholder="Movement">
-        <p>{{work.moveData}}</p>
-        <label class="whatWork" for="movements">What Did You Do Today?</label><br>
-        <ul class="listOfMoves" ng-repeat="moves in work.moveData.movements">
-            <li>
-              {{moves.name}}<br>
-              <input type="text" value="{{moves.reps}}"> reps<br>
-              <input type="number" value="{{moves.rds}}"> rds
-            </li>
-        </ul>
+<!-- TODO: extract, add nav with ng-include instead -->
+<div class="container-fluid main-body" ng-controller="MainController">
+  <nav class="navbar navbar-default main-nav" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+          <img class="ree" src="images/reebokxfit.png" alt="">
+        </a>
+        <a class="name" href="#">
+          <h1 class="appName navbar-left">Activ8</h1>
+        </a>
+        <button ng-click="logOut()" class="logout navbar-right btn">Logout</button>
       </div>
-      </form>
+    </div>
+  </nav>
+<!-- /TODO -->
 
-      <div class="ui-widget workoutList hidden">
-        <label class="whatWork" for="workoutList">What Workout Did You Do?</label><br>
-        <input id="workoutList" placeholder="Workout Name">
+  <section class="main" ng-controller="WorkoutController as work">
+    <form class="newMove" style="margin-top: 40%;" ng-submit="work.postWorkout()">
+      <div class="new-moves">
+        <label>Workout</label><br>
+        <input class="moving" ng-model="moving" type="text" list="moving" placeholder="Select Movement" autocomplete><br>
+        <input type="text" ng-model="move.reps" ng-show="work.repsRounds() || work.weighted()" placeholder="Reps"><br>
+        <input type="text" ng-model="move.rds" ng-show="work.repsRounds() || work.weighted()" placeholder="Rounds"><br>
+        <input type="text" ng-model="move.weight"ng-show="work.weighted()" placeholder="Weight"><br>
       </div>
-      <section class="add">
-        <a class="addMovement"><h4>(+)Add Movement</h4></a>
-        <a class="addWorkout removeWorkout" ><h4>(+)Add Workout</h4></a>
-        <button ng-click="work.addWorkout()" class="save btn btn-primary" type="submit">Save</button>
-      </section>
-  </div>
+      <div>
+        <input type="submit" value="Save">
+      </div>
+    </form>
+    <datalist id="moving">
+      <option data-ng-repeat="moves in work.moveList.movements" value="{{moves.name}}"></option>
+    </datalist>
+    <br>
+    <p style="color: white;">{{moves.type}}</p>
+    <input type="Button" value="Add" ng-click="work.addMove()"><br>
+    Workouts: {{work.workout}}<br>
+    Work: {{move}}<br>
+  </section> <!-- / .main -->
+
+  <div class="ui-widget workoutList hidden">
+    <label class="whatWork" for="workoutList">What Workout Did You Do?</label><br>
+    <input id="workoutList" placeholder="Workout Name">
+  </div> <!-- /.workoutList -->
+
+  <section class="add">
+    <a class="addMovement"><h4>(+) Add Movement</h4></a>
+    <a class="addWorkout removeWorkout" ><h4>(+) Add Workout</h4></a>
+    <button ng-click="work.addWorkout()" class="save btn btn-primary" type="submit">Save</button>
   </section>
-  <script>
-
-     var workouts = [
-        "Amanda",
-        "Annie",
-        "Fran",
-        "Murph",
-        "Filthy Fifty"
-     ];
-
-     /*$( ".movements" ).autocomplete({
-       source: movements
-     });*/
-     $("#workoutList").autocomplete({
-       source: workouts
-     });
-     /*$(".repCount").autocomplete({
-       source: reps
-     });*/
-  $(".addWorkout").on('click', function(){
-  if($('.workoutList').hasClass('hidden')){
-      $('.workoutList').removeClass('hidden')
-      $('.movementsList').addClass('hidden')
-      $('.addMovement').addClass('hidden');
-      $(".addWorkout h4").text("(-)Remove Workout");
-    } else {
-   if($('.movementsList').hasClass('hidden')){
-      $('.workoutList').addClass('hidden')
-      $('.movementsList').removeClass('hidden')
-      $('.addMovement').removeClass('hidden');
-      $(".addWorkout h4").text("(+)Add Workout");
-    }
-    };
-  });
-
-    $(".addMovement").on('click',function(){
-      $('.listOfMoves').append('<li><input class="movements" placeholder="Movement" style="margin-left: -3px;"><button type="button" class="btn btn-default deleteMove">X</button></li>');
-      $( ".movements" ).autocomplete({
-        source: movements
-      });
-    });
-    $('body').on('click', '.deleteMove', function(){
-      $(this).parent().remove()
-    });
-</script>
+</div><!-- /.main-body -->
