--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -16,7 +16,7 @@
     <section ng-hide="app.loggedIn()" class="kettleBox" >
       <span>You are logged out. ln#17</span>
       <figure ng-click="app.login()">
-        <a ><img src="./assets/images/kettlebell.png" alt="KettleFBLogin" class="img-responsive kettle"></a><br>
+        <a><img src="./assets/images/kettlebell.png" alt="" class="img-responsive kettle"></a><br>
         <figcaption class="loginText">
           <a href="#"><h3>Login</h3></a>
         </figcaption>
