fab9: finish integration of exising code w Yeoman

--- a/src/app/views/new-workout.html
+++ b/src/app/views/new-workout.html
@@ -1,4 +1,4 @@
-<!-- TODO: extract, add nav with ng-include instead -->
+<!-- TODO: extract, inject nav with ng-include instead -->
 <div class="container-fluid main-body" ng-controller="MainController">
   <nav class="navbar navbar-default main-nav" role="navigation">
     <div class="container-fluid">
