--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -170,7 +170,7 @@ h4 {
     transform: rotateZ(90deg)
   }
   .main-body {
-    background: url(./assets/images/boxbg.jpg) no-repeat center center fixed;
+    background: url(/assets/images/boxbg.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     background-size: cover;
   }
