--- a/src/app/views/main.html
+++ b/src/app/views/main.html
@@ -46,7 +46,7 @@
           <p class="fbName">{{app.user.fullName|| displayName}}</p>
         </section><!-- / section.avatar -->
         <section class="plus-workout col-xs-7">
-          <button type="button" class="btn btn-success work-btn glyphicon glyphicon-plus">New Workout</button>
+          <a role="button" class="btn btn-success work-btn glyphicon glyphicon-plus" href="http://localhost:3000/index.html#/new-workout">New Workout</a>
         </section><!-- / section.plus-workout -->
       </div>
       <!-- BEGIN Days Active -->
